[package]
name = "appddl"
version = "1.1.0"
authors = ["Isaac Whitfield <iw@whitfin.io>"]
description = "Small download tool to automate AppDynamics downloads."
repository = "https://github.com/whitfin/appddl"
keywords = ["app-dynamics", "appdynamics", "monitoring", "filesystem"]
categories = ["command-line-utilities", "filesystem"]
edition = "2018"
license = "MIT"

[dependencies]
bytes = "1.0"
clap = "2.33"
futures = "0.3"
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5"
regex = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

[profile.release]
codegen-units = 1
opt-level = 3
lto = true
